# soccer

./: CMakeLists.txt  LICENSE  board_test.cpp  directions.hpp  match.cpp  match.hpp  pitch.cpp  pitch.hpp  pitch_array.cpp  pitch_array.hpp  pitch_array_test.cpp  pitch_test.cpp  test_match.cpp  test_pitch.cpp  test_pitch_array.cpp
